Removed unnecessary test dependencies from module-info.java and refactored shared test classes. (#38447)
* Removed unnecessary test dependencies from module-info.java and refactored shared test classes.

* Fixed build issues.